--- a/flex.html
+++ b/flex.html
@@ -7,7 +7,7 @@
     </head>
     <body>
        
-        <div class ="header-box">
+        <div class ="header">
              <div></div>
              <div></div>
              <div></div>
@@ -30,7 +30,7 @@
            </div>
        </main>
        
-        <div class="footer-box">
+        <div class="footer">
             <div></div>
             <div></div>
             <div></div>
